# shortdrama-hotspot

./: .gitignore  LICENSE  README.md  config.py  fetch_hotspot.py  pipeline.py  pyproject.toml  requirements.txt
scripts/: comfyui_api.py  fetch_hotspot.py  generate_images.py  generate_script.py  modify_workflows.py  tts_subtitle.py
templates/: comfyui_pipeline_config.json  genre_templates.json
tests/: test_config.py  test_genre.py
utils/: __init__.py  api_helpers.py  genre.py
workflows/: Flux2-Klein-9B-文生图-fp4版_1080p.json  Wan2.2-14B文生视频-4步_8s.json  sdxl_1080p_portrait.json  sdxl_wan22_combined.json  wan22_5B_ti2v_720p.json  wan22_i2v_1080p_8s.json  wan22_i2v_720p_8s_8B.json  wan22_i2v_720p_8s_GGUF.json
